# Serbia-Dish-Image-Generator

./: .gitignore  README.md  coolinarika_scraper_2.py  fusion.py  main.py  make_clip_text_embeds.py  make_short_prompts_and_captions.py  pyproject.toml  translator.py
data/: merged_translated.json
data_pipeline/preprocessing/: dishes_processor.py  last_processed.json  make_clip_text_embeds.py  make_enhanced_clip_embeds.py  manual.py  skipped.json
data_pipeline/scraping/: coolinarika_scraper.py  fusion.py  recepti_com_scrape.py  translator.py
docs/IEEE/: main.tex
models_pipeline/cvae/: model.py
models_pipeline/gan/: GAN_Implementation.ipynb  README.md  ema.py  inference_prompt.py  train_with_plotting.py
models_pipeline/sd_lora/testing/: comparison_test_sd_lora.ipynb  comparison_test_sd_lora.py  metrics_test_sd_lora.ipynb  metrics_test_sd_lora.py  test_sd_lora.ipynb
paper/: bibliography.bib  main.tex
src/cvae/: cvae.ipynb  dataset.py  generate_cvae.py  generate_images.py  hyperparam_search.py  image_generation.py  model.py  train.py  utils.py
src/gan/: README_IMPROVEMENTS.md  analyze_embeddings.py  dataset.py  diffaug.py  dynamic_train.py  ema.py  inference.py  inference_prompt.py  models.py  t4_config.py  train.py  train_with_plotting.py
src/lora/: train_lora.py
src/processing/: dishes_processor.py  image-processing.py  make_short_prompts_and_captions.py  translator.py
src/scraping/: coolinarika_scraper.py  coolinarika_scraper_2.py  fusion.py  recepti_com_scrape.py  translator.py
src/training/: train_lora.py
testing/: test_lora.py
(+2 files in other folders)
